--- a/dashboard.html
+++ b/dashboard.html
@@ -9,16 +9,17 @@
   <!-- change this favicon -->
     <link href="img/favicon.png" rel="icon">
   <link href="img/apple-touch-icon.png" rel="apple-touch-icon">
-
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Montserrat:300,400,500,700" rel="stylesheet">
   <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="lib/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+  <!-- <link href="lib/font-awesome/css/font-awesome.min.css" rel="stylesheet"> -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link href="lib/animate/animate.min.css" rel="stylesheet">
   <link href="lib/ionicons/css/ionicons.min.css" rel="stylesheet">
   <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
   <link href="lib/lightbox/css/lightbox.min.css" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">
   <link href="css/dashboard.css" rel="stylesheet">
+  <!-- <script src="https://use.fontawesome.com/e2eea6562c.js"></script> -->
 </head>
 
 <body>
@@ -80,6 +81,21 @@
             <header class="section-header">
                 <h3>Previous Pickups</h3>
                 </header>
+
+                <div class="ordercard">
+                    <div class="card-date">
+                        <i class="fa fa-calendar-alt"></i> 
+                        24oct 1998
+                    </div>
+                    <div class="card-credits">
+                        <i class="fa fa-clipboard-list-check"></i>
+                        8888
+                    </div>
+                    <div class="card-quantity">
+                        34L
+                    </div>
+                </div>
+
           </div>
       </section>
 
