front end done1

--- a/dashboard.html
+++ b/dashboard.html
@@ -147,7 +147,7 @@
       <section class="previous-pickups">
           <div class="container previous-pickups-container">
               <div class="previous-pickup-table">
-                <table class="table">
+                <table class="table table-hover">
                     <thead>
                       <tr>
                         <th scope="col">#</th>
